--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Starting"
         tools:targetApi="31">
         <activity
-            android:name=".LottieAnimationActivity"
+            android:name=".presentation.LottieAnimationActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
 
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.MainActivity"
             android:theme="@style/Base.Theme.Aston_intensiv_final_project"
             android:exported="true">
             <intent-filter>
