--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,16 +24,10 @@
 
         </activity>
         <activity
+            android:windowSoftInputMode="adjustPan"
             android:name=".presentation.MainActivity"
             android:theme="@style/Base.Theme.Aston_intensiv_final_project"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
         </activity>
     </application>
 
